--- a/chatbox.css
+++ b/chatbox.css
@@ -1,12 +1,10 @@
 .windowBoard {
     width: 95vw;
-    height: 90vh;
-
+    height: 610px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     border: 1px darkgrey;
     border-collapse: collapse;
     background-color: darkgrey;
@@ -14,7 +12,7 @@
 
 .fullboard{
     width: 1000px;
-    height: 100vh;
+    height: 100vw;
 
     display: flex;
     align-items: center;
@@ -30,16 +28,106 @@
 
     align-items: center;
 
-    background-color: blue;
+    background-color: lightgrey;
 }
 
 .appNameBox {
     display: flex;
-    width: 75%;
+    width: 75vw;
     align-items: baseline;
-    background-color: green;
 }
 
-.appNameBox .appNametext{
+.topBannerIconBoxContainer {
+    display: flex;
+    width: 25vw;
+    align-items: center;
+    justify-content: center;
+}
 
+.iconBox {
+    display: flex;
+    width: 60px;
+    height: 70%;
+    
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    font-size: 22px;
+}
+.iconBox i{
+    color: black;
+}
+
+.iconBox p{
+    min-height: 12px;
+    font-size: 12px;
+    color: darkgreen;
+}
+
+.chatAppBoard {
+    width: 100%;
+    height: 100%;
+
+    border: 1px solid darkgrey;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+}
+
+.chatTextViewBoard {
+    display: flex;
+    flex-direction: column;
+
+    height: 100%;
+    width: 75%;
+
+    border-right: 1px solid darkgrey;
+
+    background-color: white;
+}
+.chatTextBanner {
+    display: flex;
+    height: 14%;
+    width: 100%;
+    background-color: #0b8e64;
+}
+
+.chatChannelViewBoard{
+    display: flex;
+    flex-direction: column;
+
+    height: 100%;
+    width: 25%;
+
+    background-color: white;
+}
+
+.chatChannelBanner {
+    display: flex;
+    height: 14%;
+    width: 100%;
+    background-color: #0b8e64;
+}
+
+.chatChannelBoardContainer{
+    height: 86%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    background-color: blue;
+}
+
+.chatChannelBoard{
+    height: 20px;
+    width: 80%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: yellow;
 }
