--- a/chatbox.css
+++ b/chatbox.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #EEEEEE;
+}
 .windowBoard {
     width: 95vw;
     height: 610px;
@@ -6,6 +9,7 @@
     justify-content: center;
     align-items: center;
     border-collapse: collapse;
+    background-color: #EEEEEE;
 
 }
 
@@ -17,7 +21,7 @@
     align-items: center;
     flex-direction: column;
     background-color: #EEEEEE;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 }
 
 .topBanner{
@@ -54,6 +58,7 @@
     
     font-size: 22px;
 }
+
 .iconBox i{
     color: black;
 }
@@ -79,20 +84,19 @@
     flex-direction: column;
 
     height: 100%;
-    width: 75%;
+    width: 70%;
 
     border-right: 1px solid darkgrey;
 
     background-color: white;
 }
 
-
 .chatChannelViewBoard{
     display: flex;
     flex-direction: column;
 
     height: 100%;
-    width: 25%;
+    width: 30%;
 
     background-color: white;
 }
@@ -106,7 +110,6 @@
     background-color: #0b8e64;
 }
 
-
 .chatBanner p{
     font-size: small;
     text-indent: 10px;
@@ -118,18 +121,42 @@
 
     display: flex;
     flex-direction: column;
-    justify-content:center;
     align-items:center;
-    background-color: blue;
 }
 
 .chatChannelBoard{
-    height: 20px;
-    width: 80%;
+    height: 35px;
+    width: 90%;
+
+    display: flex;
+    /*justify-content: center;*/
+    align-items: center;
+    background-color: #F9F9F9;
+    color: #327AB7;
+
+    /*
+    * lightgrey channel BG color: #F9F9F9;
+    * darkgrey channel BG color: #EEEEEE;
+    */
+
+}
+
+.channelIconBox {
+    height: 30px;
+    width: 50px;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 22px;
+}
 
-    background-color: yellow;
+.channelIconBox i{
+    color: #FF671B;
+    
+    /*
+    * orange color: #FF671B
+    * green color: #5F9EA0;
+    */
+
 }
