--- a/chatbox.css
+++ b/chatbox.css
@@ -19,14 +19,56 @@
     background-color: #EEEEEE;
     border: 1px solid black;
 }
+.receivedMsg{
+	border-radius: 20px;
+    background-color: #F1F0F0;
+	width: 25%;
+	float: left;
+    border: 1px solid black;
+	padding:7px;
+}
+.sentMsg{
+	border-radius: 20px;
+    background-color: blue;
+	width: 25%;
+    border: 1px solid black;
+	padding:7px;
+	margin-left:auto;
+	margin-right:7%;
+}
+.row{
+	width: 100%;
+	height: auto;
+    display: flex;
+	flex-direction: column;
+    align-items: column;
+	padding-left:10px;
+	padding-top:10px;
 
+
+}
+div.name {
+	color:grey;
+    font-size: 13px;
+	padding-bottom:3px;
+}
+div.dateRcvd {
+    font-size: 13px;
+	padding-left:10px;
+	padding-top:3px;
+}
+div.dateSent {
+	float:right;
+    font-size: 13px;
+	padding-top:3px;
+	margin-left:auto;
+	margin-right:7%;
+}
 .topBanner{
     width: 100%;
     height: 80px;
     display: flex;
-
     align-items: center;
-
     background-color: #EEEEEE;
 }
 
