--- a/chatbox.css
+++ b/chatbox.css
@@ -3,42 +3,44 @@ body{
 }
 .windowBoard {
     width: 95vw;
-    height: 610px;
+    height: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-collapse: collapse;
-    background-color: #EEEEEE;
-
 }
 
 .fullboard{
-    width: 1000px;
-    height: 100vw;
+    width: 60vw;
+    height: 100vh;
 
     display: flex;
     align-items: center;
     flex-direction: column;
     background-color: #EEEEEE;
-    /*border: 1px solid black;*/
 }
+
 .receivedMsg{
+
 	border-radius: 20px;
     background-color: #F1F0F0;
 	width: 25%;
 	float: left;
-    border: 1px solid black;
+
 	padding:7px;
 }
 .sentMsg{
+
 	border-radius: 20px;
-    background-color: blue;
+    background-color: #0395D3;
+    color: white;
 	width: 25%;
-    border: 1px solid black;
+   
 	padding:7px;
 	margin-left:auto;
-	margin-right:7%;
+    margin-right:7%;
+    text-align: right;
 }
 .row{
 	width: 100%;
@@ -56,11 +58,13 @@ div.name {
     font-size: 13px;
 	padding-bottom:3px;
 }
+
 div.dateRcvd {
     font-size: 13px;
 	padding-left:10px;
 	padding-top:3px;
 }
+
 div.dateSent {
 	float:right;
     font-size: 13px;
@@ -68,6 +72,7 @@ div.dateSent {
 	margin-left:auto;
 	margin-right:7%;
 }
+
 .topBanner{
     width: 100%;
     height: 80px;
@@ -120,10 +125,59 @@ div.dateSent {
     flex-direction: row;
     background-color: white;
 }
-.scrollingBar {
-	overflow: auto;
-	height: 86%;
+
+.chatViewBox {
+    display: flex;
+    flex-direction: column;
+    height: 86%;
+    width: 100%;
 }
+
+.chatTextBox{
+    display: block;
+    flex-direction: column;
+    overflow: scroll;
+
+    height: 85%;
+
+}
+.chatInputBoard{
+    display: flex;
+    height: 15%;
+
+
+}
+
+.chatInputBox{
+    display: flex;
+    height: 77%;
+    width: 100%;
+
+    box-shadow: 0px 0px 8px 0 rgba(0, 0, 0, 0.2), 0 0px 10px 0 rgba(0, 0, 0, 0.2);
+    flex-direction: row;
+
+
+}
+
+.chatInputThumbsUpBox{
+    display: flex;
+    height: 100%;
+    width: 15%;
+
+    align-items: center;
+    justify-content: center;
+
+    font-size: 250%;
+    background-color: #5F9EA0;
+
+    color: white;
+}
+
+.chatInputBox input{
+    height: 100%;
+    width: 60%;
+}
+
 .chatTextViewBoard {
     display: flex;
     flex-direction: column;
