--- a/chatbox.css
+++ b/chatbox.css
@@ -11,7 +11,6 @@ body{
     align-items: center;
     border-collapse: collapse;
 }
-
 .fullboard{
     width: 80vw;
     height: 100vh;
@@ -22,7 +21,6 @@ body{
     flex-direction: column;
     background-color: #EEEEEE;
 }
-
 .receivedMsg{
 
 	border-radius: 20px;
@@ -74,7 +72,6 @@ div.dateSent {
 	margin-left:auto;
 	margin-right:7%;
 }
-
 .topBanner{
     width: 100%;
     height: 80px;
@@ -82,20 +79,17 @@ div.dateSent {
     align-items: center;
     background-color: #EEEEEE;
 }
-
 .appNameBox {
     display: flex;
     width: 75vw;
     align-items: baseline;
 }
-
 .topBannerIconBoxContainer {
     display: flex;
     width: 25vw;
     align-items: center;
     justify-content: center;
 }
-
 .iconBox {
     display: flex;
     width: 60px;
@@ -107,17 +101,14 @@ div.dateSent {
     
     font-size: 22px;
 }
-
 .iconBox i{
     color: black;
 }
-
 .iconBox p{
     min-height: 12px;
     font-size: 12px;
     color: darkgreen;
 }
-
 .chatAppBoard {
     width: 100%;
     height: 100%;
@@ -127,18 +118,16 @@ div.dateSent {
     flex-direction: row;
     background-color: white;
 }
-
 .chatViewBox {
     display: flex;
     flex-direction: column;
     height: 86%;
     width: 100%;
 }
-
 .chatTextBox{
     display: block;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
     overflow-x: hidden;
     height: 85%;
 
@@ -146,8 +135,6 @@ div.dateSent {
 .chatInputBoard{
     display: flex;
     height: 15%;
-
-
 }
 
 .chatInputBox{
@@ -174,7 +161,7 @@ div.dateSent {
     color: white;
 }
 .chatInputBox textarea{
-    height: 95%;
+    height: 100%;
     width: 70%;
     border: none;
     resize: none;
@@ -219,7 +206,7 @@ div.dateSent {
 
     background-color: white;
 }
-.chatBanner {
+.chatBanner{
     display: flex;
     flex-direction: column;
     height: 14%;
@@ -231,22 +218,46 @@ div.dateSent {
     font-size: small;
     text-indent: 10px;
 }
-
 .chatBannerActiveGroup{
     display: flex;
     align-items: center;
     height: 30px;
 }
-
 .chatBannerActiveGroup h2{
     text-indent: 10px;
 }
+.chatBannerChannelContainer{
+    display: flex;
+    align-items: center;
 
+    height: 30px;
+    width: 100%;
+}
+.chatBannerChannelContainer h2 {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+
+    text-indent: 10px;
+    min-width: 80%;
+    max-width: 80%;
+    height: 100%;
+}
+.chatBannerIconBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 125%;
+
+    height: 100%;
+    width: 10%;
+}
 .chatChannelBoardContainer{
     height: 86%;
     width: 100%;
 
-    overflow: scroll;
+    overflow: auto;
     overflow-x: hidden;
 
     display: flex;
@@ -278,7 +289,7 @@ div.dateSent {
 }
 .channelIconBox i{
     color: #FF671B;
-    
+        
     /*
     * orange color: #FF671B
     * green color: #5F9EA0;
