--- a/chatbox.css
+++ b/chatbox.css
@@ -25,7 +25,7 @@ body{
 
 	border-radius: 20px;
     background-color: #F1F0F0;
-	width: 25%;
+	width: 35%;
 	float: left;
 
 	padding:7px;
@@ -35,7 +35,7 @@ body{
 	border-radius: 20px;
     background-color: #0395D3;
     color: white;
-	width: 25%;
+	width: 35%;
    
 	padding:7px;
 	margin-left:auto;
@@ -60,17 +60,19 @@ div.name {
 }
 
 div.dateRcvd {
-    font-size: 13px;
+    font-size: 11px;
 	padding-left:10px;
-	padding-top:3px;
+    padding-top:3px;
+    font-style: italic;
 }
 
 div.dateSent {
 	float:right;
-    font-size: 13px;
+    font-size: 11px;
 	padding-top:3px;
 	margin-left:auto;
-	margin-right:7%;
+    margin-right:7%;
+    font-style: italic;
 }
 .topBanner{
     width: 100%;
@@ -136,17 +138,15 @@ div.dateSent {
     display: flex;
     height: 15%;
 }
-
 .chatInputBox{
     display: flex;
     align-items: center;
     height: 65%;
     width: 100%;
 
-    box-shadow: 0px 0px 8px 0 rgba(0, 0, 0, 0.2), 0 0px 10px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 8px 0 rgba(0, 0, 0, 0.2), 0 0px 10px 0 rgba(0, 0, 0, 0.5);
     flex-direction: row;
 }
-
 .chatInputThumbsUpBox{
     display: flex;
     height: 100%;
@@ -177,7 +177,6 @@ div.dateSent {
     color: white;
 
 }
-
 .chatInputBox input{
     height: 100%;
     width: 15%;
