--- a/chatbox.css
+++ b/chatbox.css
@@ -322,3 +322,34 @@ div.dateSent {
     */
 
 }
+.setting{
+    background-color: Bisque;
+	align-items: center;
+	border-collapse: collapse;
+	border-left: 1px solid grey;
+	width: 72px;
+	height: 45px;
+
+}
+.chatBannerIconBox:hover .tooltipContainer {
+    visibility: visible;
+    transition-delay: 1s;
+}
+.chatBannerIconBox .tooltipContainer {
+    box-shadow: 0px 0px 10px grey;
+    visibility: hidden;
+    width: 100;
+    color:black;
+    background-color: white;
+    height: 20;
+    display: flex;
+    flex-direction: column;
+
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
