--- a/chatbox.css
+++ b/chatbox.css
@@ -265,7 +265,7 @@ div.dateSent {
     align-items:center;
 }
 .chatEvenChannelBoard{
-    height: 35px;
+    min-height: 35px;
     width: 90%;
 
     display: flex;
@@ -285,7 +285,8 @@ div.dateSent {
     display: flex;
     align-items: center;
     justify-content: center;
-
+	margin-left:auto;
+    margin-right:7%;
     font-size: 14px;
     border-radius: 10px;
     color: #327AB7;
@@ -294,7 +295,7 @@ div.dateSent {
 }
  .chatOddChannelBoard
 {
-    height: 35px;
+    min-height: 35px;
     width: 90%;
 
     display: flex;
@@ -324,7 +325,7 @@ div.dateSent {
 }
 .chatBannerIconBox:hover .tooltipContainer {
     visibility: visible;
-    transition-delay: 1s;
+    transition-delay: 0.2s;
 }
 .chatBannerIconBox .tooltipContainer {
     box-shadow: 0px 0px 10px grey;
